Remove /api prefix from urls
